--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-csv</artifactId>
+        <version>2.5.3</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
