--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
         <artifactId>commons-csv</artifactId>
         <version>1.4</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.8.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
