--- a/simple-microservice/pom.xml
+++ b/simple-microservice/pom.xml
@@ -17,6 +17,10 @@
             <groupId>io.wegetit</groupId>
             <artifactId>nautilus-commons-microservice</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
